Updated swagger model and operations from swagger spec
