# pkg/api/v1/restapi/operations/bare_metal_hosts/register_bare_metal_host.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package bare_metal_hosts
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// RegisterBareMetalHostHandlerFunc turns a function with the right signature into a register bare metal host handler
+type RegisterBareMetalHostHandlerFunc func(RegisterBareMetalHostParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn RegisterBareMetalHostHandlerFunc) Handle(params RegisterBareMetalHostParams) middleware.Responder {
+	return fn(params)
+}
+
+// RegisterBareMetalHostHandler interface for that can handle valid register bare metal host params
+type RegisterBareMetalHostHandler interface {
+	Handle(RegisterBareMetalHostParams) middleware.Responder
+}
+
+// NewRegisterBareMetalHost creates a new http.Handler for the register bare metal host operation
+func NewRegisterBareMetalHost(ctx *middleware.Context, handler RegisterBareMetalHostHandler) *RegisterBareMetalHost {
+	return &RegisterBareMetalHost{Context: ctx, Handler: handler}
+}
+
+/*RegisterBareMetalHost swagger:route POST /bare-metal-hosts bare-metal-hosts registerBareMetalHost
+
+RegisterBareMetalHost register bare metal host API
+
+*/
+type RegisterBareMetalHost struct {
+	Context *middleware.Context
+	Handler RegisterBareMetalHostHandler
+}
+
+func (o *RegisterBareMetalHost) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewRegisterBareMetalHostParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
