# pkg/api/v1/restapi/operations/bare_metal_hosts/register_bare_metal_host_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package bare_metal_hosts
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/mahakamcloud/mahakam/pkg/api/v1/models"
+)
+
+// RegisterBareMetalHostCreatedCode is the HTTP code returned for type RegisterBareMetalHostCreated
+const RegisterBareMetalHostCreatedCode int = 201
+
+/*RegisterBareMetalHostCreated Created
+
+swagger:response registerBareMetalHostCreated
+*/
+type RegisterBareMetalHostCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BareMetalHost `json:"body,omitempty"`
+}
+
+// NewRegisterBareMetalHostCreated creates RegisterBareMetalHostCreated with default headers values
+func NewRegisterBareMetalHostCreated() *RegisterBareMetalHostCreated {
+
+	return &RegisterBareMetalHostCreated{}
+}
+
+// WithPayload adds the payload to the register bare metal host created response
+func (o *RegisterBareMetalHostCreated) WithPayload(payload *models.BareMetalHost) *RegisterBareMetalHostCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the register bare metal host created response
+func (o *RegisterBareMetalHostCreated) SetPayload(payload *models.BareMetalHost) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *RegisterBareMetalHostCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*RegisterBareMetalHostDefault error
+
+swagger:response registerBareMetalHostDefault
+*/
+type RegisterBareMetalHostDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewRegisterBareMetalHostDefault creates RegisterBareMetalHostDefault with default headers values
+func NewRegisterBareMetalHostDefault(code int) *RegisterBareMetalHostDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &RegisterBareMetalHostDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the register bare metal host default response
+func (o *RegisterBareMetalHostDefault) WithStatusCode(code int) *RegisterBareMetalHostDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the register bare metal host default response
+func (o *RegisterBareMetalHostDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the register bare metal host default response
+func (o *RegisterBareMetalHostDefault) WithPayload(payload *models.Error) *RegisterBareMetalHostDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the register bare metal host default response
+func (o *RegisterBareMetalHostDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *RegisterBareMetalHostDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
